# simple-agent

./: .env  .env.example  .gitignore  README.md  README_EN.md  pyproject.toml  pytest.ini
skills/agent-builder/references/: minimal-agent.py  subagent-pattern.py
skills/agent-builder/scripts/: init_agent.py
src/simple_agent/: __init__.py  __main__.py  cli.py  exceptions.py
src/simple_agent/agent/: __init__.py  base.py  context.py  loop.py  subagent.py
src/simple_agent/cli/: __init__.py  input_handler.py  main.py
src/simple_agent/core/: __init__.py  container.py  service_registration.py
src/simple_agent/interfaces/: __init__.py  agent.py  managers.py
src/simple_agent/managers/: __init__.py  background.py  base.py  memory.py  message.py  project.py  session.py  skill.py  task.py  teammate.py  todo.py
src/simple_agent/models/: __init__.py  config.py  memory.py  messages.py  projects.py  tasks.py
src/simple_agent/permissions/: __init__.py  manager.py  models.py  wrapper.py
src/simple_agent/providers/: __init__.py  anthropic.py  base.py  gemini.py  groq.py  local.py  openai.py  openai_compatible.py
src/simple_agent/tools/: __init__.py  base.py  bash_tools.py  file_tools.py  handler_registry.py  (+4 more)
tests/: __init__.py  conftest.py  test_exceptions.py  test_security.py
tests/test_agent/: test_base.py  test_context.py  test_loop.py
tests/test_cli/: test_main.py
tests/test_managers/: test_background_manager.py  test_container.py  test_memory_factories.py  test_message_manager.py  test_project_manager.py  test_session_manager.py  test_skill_manager.py  test_task_manager.py  test_teammate_manager.py
tests/test_models/: test_config.py
tests/test_permissions/: test_manager.py  test_models.py  test_wrapper.py
tests/test_providers/: test_base.py  test_openai.py
tests/test_tools/: test_bash_tools.py  test_file_tools.py  test_handler_registry.py  test_search_tools.py  test_tool_definitions.py  test_web_tools_config.py
tests/test_utils/: test_error_handling.py  test_logger.py  test_tool_handlers.py
(+18 files in other folders)
