[project]
name = "simple-agent"
version = "0.3.0"
description = "A Pydantic-style AI Agent with tool dispatch, task management, and team collaboration"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "anthropic>=0.84.0",
    "openai>=1.0.0",
    "google-genai>=1.0.0",
    "groq>=0.4.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "typer>=0.12.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
openai = [
    "openai>=1.0.0",
]
gemini = [
    "google-genai>=1.0.0",
]
groq = [
    "groq>=0.4.0",
]
all = [
    "simple-agent[dev]",
    "simple-agent[openai]",
    "simple-agent[gemini]",
    "simple-agent[groq]",
]

[project.scripts]
simple-agent = "simple_agent.cli:main_cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/simple_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]
